2007-06-19 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt for libvoikko 1.5
	* Increase version number to 2.1

2007-06-14 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for building on Windows with Microsoft
	  Visual C++ 2005 Express Edition
	* Fix some warnings generated by MSVC

2007-05-12 Harri Pitkänen <hatapitk@iki.fi>

	* Return immediately from Hyphenator::hyphenate and
	  Hyphenator::createPossibleHyphens if initialization has
	  not been done.

2007-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Do not hyphenate at '
	* Increase version number to 2.0.1

2007-04-19 Harri Pitkänen <hatapitk@iki.fi>

	* Initial ChangeLog entry for version 2.0rc1