@@ -1,0 +1,14 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<oor:component-schema
+ oor:name="Config"
+ oor:package="org.puimula.ooovoikko"
+ xml:lang="en-US"
+ xmlns:oor="http://openoffice.org/2001/registry"
+ xmlns:xs="http://www.w3.org/2001/XMLSchema"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <component>
+    <group oor:name="internal">
+      <prop oor:name="location" oor:type="xs:string"/>
+    </group>
+  </component>
+</oor:component-schema>
